--- a/model-config.json
+++ b/model-config.json
@@ -1,20 +1,12 @@
 {
   "_meta": {
     "sources": [
-      "loopback/common/models",
-      "loopback/server/models",
-      "../common/models",
       "./models"
-    ],
-    "mixins": [
-      "loopback/common/mixins",
-      "loopback/server/mixins",
-      "../common/mixins",
-      "./mixins"
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "db",
+    "public": false
   },
   "AccessToken": {
     "dataSource": "db",
@@ -31,5 +23,8 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "reader": {
+    "dataSource": "db"
   }
 }
