--- a/hasOne/model-config.json
+++ b/hasOne/model-config.json
@@ -1,20 +1,12 @@
 {
   "_meta": {
     "sources": [
-      "loopback/common/models",
-      "loopback/server/models",
-      "../common/models",
       "./models"
-    ],
-    "mixins": [
-      "loopback/common/mixins",
-      "loopback/server/mixins",
-      "../common/mixins",
-      "./mixins"
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "db",
+    "public": false
   },
   "AccessToken": {
     "dataSource": "db",
@@ -29,6 +21,13 @@
     "public": false
   },
   "Role": {
+    "dataSource": "db",
+    "public": false
+  },
+  "owner": {
+    "dataSource": "db"
+  },
+  "pet": {
     "dataSource": "db",
     "public": false
   }
