--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hacksparrow/http-express-loopback#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0"
   }
